Fixed sidebar height on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,8 @@ html {
 body {
     font-size: 16rem;
     font-family: 'Montserrat';
+    height: 100%;
+    overflow: hidden;
 }
 
 :root {
@@ -285,7 +287,7 @@ body {
         z-index: 19;
         top: 0;
         left: 0;
-        height: 100vh;
+        height: 100%;
         width: 60vw;
         transform: translate(-500px);
         transition: transform 300ms ease-in-out;
